<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_bookmark"

                android:title="@string/bookmark"/>
        <item
                android:id="@+id/nav_interest"

                android:title="@string/interest"/>
        <item
                android:id="@+id/nav_new_story"

                android:title="@string/new_story"/>
        <item
                android:id="@+id/nav_stories"

                android:title="@string/stories"/>
    </group>


</menu>
