<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_example_topic" />

    <TextView
            android:id="@+id/tv_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_weight="1"
            android:text="@string/books"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    <Button
            android:id="@+id/btn_follow"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:background="@drawable/rectangle_btn_follow"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:textColor="@color/colorRed" />

</LinearLayout>