<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar

                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="30dp" android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_close_black_24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/iv_close"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/close" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textSize="20sp"
                        android:id="@+id/tv_save"
                        android:textColor="@color/colorRed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pb_edit"
                android:layout_gravity="center"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="16dp"
                    android:id="@+id/ll_chose_img"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_edit"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:civ_border_width="1dp"
                        app:civ_border_color="#FF000000"
                        android:src="@color/colorBlack"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/choose_an_image"
                        android:textColor="@color/colorRed"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/nama"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_name"
                    android:id="@+id/et_nama"
                    android:textSize="14sp"/>

            <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/about"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/about_you"
                    android:id="@+id/et_about"
                    android:textSize="14sp"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>