<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:id="@+id/ll_nav_bar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom" android:focusable="true">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="32dp"
            android:src="@color/colorBlack"
            app:civ_border_width="1dp"
            app:civ_border_color="#FF000000"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/iv_header"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"

            android:text="@string/nav_header_title"
            android:id="@+id/tv_header_main"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp"
            android:id="@+id/textView"/>

</LinearLayout>
