<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SearchActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">
        <ImageView
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_back"
                app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp"
                android:contentDescription="@string/back" />
        <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">
            <EditText
                    android:inputType="textAutoComplete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@color/colorGrey"
                    android:layout_weight="1"
                    android:hint="@string/search"
                    tools:ignore="NestedWeights"/>
            <ImageView
                    android:id="@+id/iv_search"
                    android:layout_margin="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_search_black_24dp"
                    android:contentDescription="@string/search" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorWhite">
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_search"
                    android:layout_width="match_parent"
                    app:tabMode="scrollable"
                    app:tabTextAppearance="@style/MyCustomTextAppearance"
                    android:layout_height="match_parent">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stories"/>

                <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/people"/>
            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:id="@+id/container_search"
                android:layout_height="match_parent">

        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>


</LinearLayout>