<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".SignInActivity">

        <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                android:text="@string/mendiam"
                android:layout_margin="8dp"
                android:textSize="50sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/welcome_back"/>

        <!--<Button android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="8dp"-->
        <!--android:padding="8dp"-->
        <!--android:textColor="@color/colorBlack"-->
        <!--android:id="@+id/btn_in_facebook"-->
        <!--android:textAllCaps="false"-->
        <!--android:text="Sign In with Facebook"-->
        <!--android:drawableLeft="@drawable/ic_notifications_black_24dp"-->
        <!--android:background="@drawable/rectangle_corner"/>-->
        <!--<Button android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Sign In with Google"-->
        <!--android:padding="8dp"-->
        <!--android:id="@+id/btn_in_google"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/colorBlack"-->
        <!--android:layout_margin="8dp"-->
        <!--android:background="@drawable/rectangle_corner"/>-->
        <com.google.android.gms.common.SignInButton
                android:id="@+id/google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp">
        </com.google.android.gms.common.SignInButton>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp">
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/sign_in_with_email"
                    android:textAllCaps="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_margin="8dp"
                    android:id="@+id/btn_in_email"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:background="@drawable/rectangle_corner" />
        </FrameLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/colorDarkGrey"
                      android:text="@string/does_not_have_account"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                      android:textColor="@color/colorRed"
                      android:id="@+id/tv_sign_up"
                      android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>
