<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".SignUpActivity">

    <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                android:text="@string/mendiam"
                android:textStyle="bold"
                android:layout_marginBottom="32dp"

                android:textSize="50sp"/>

        <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_up_google"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="18sp">
        </com.google.android.gms.common.SignInButton>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp">
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/sign_up_with_email"
                    android:textAllCaps="false"
                    android:paddingStart="8dp"
                    android:layout_margin="8dp"
                    android:id="@+id/btn_up_email"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:background="@drawable/rectangle_corner"
                    android:paddingEnd="8dp"/>
        </FrameLayout>

        <!--<Button android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="8dp"-->
                <!--android:padding="8dp"-->
                <!--android:id="@+id/btn_up_facebook"-->
                <!--android:textAllCaps="false"-->
                <!--android:text="Sign Up with Facebook"-->
                <!--android:drawableLeft="@drawable/ic_notifications_black_24dp"-->
                <!--android:background="@drawable/rectangle_corner"/>-->
        <!--<Button android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Sign Up with Google"-->
                <!--android:padding="8dp"-->
                <!--android:textAllCaps="false"-->
                <!--android:id="@+id/btn_up_google"-->
                <!--android:layout_margin="8dp"-->
                <!--android:drawableLeft="@drawable/ic_notifications_black_24dp"-->
                <!--android:background="@drawable/rectangle_corner"/>/-->
        <!--<Button android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Sign Up with Email"-->
                <!--android:textAllCaps="false"-->
                <!--android:id="@+id/btn_up_email"-->
                <!--android:padding="8dp"-->
                <!--android:layout_margin="8dp"-->
                <!--android:drawableLeft="@drawable/ic_notifications_black_24dp"-->
                <!--android:background="@drawable/rectangle_corner"/>-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/have_account"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/colorRed"
                    android:layout_marginStart="8dp"
                      android:id="@+id/tv_sign_in"
                      android:text="@string/sign_in"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>